--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ ul {
     list-style: none;
     display: flex;
     flex-direction: row;
-    padding-left: 150px;
+    padding: 0 10% 0 20%;
 }
 
 .ol-2 {
@@ -67,11 +67,13 @@ button {
 
 .button-yellow {
     background-color: #FFCD29;
+    width: 250px;
+    height: 35px;
 }
-
+/* 
 .button-blue {
     background-color: #0D99FF;
-}
+} */
 
 footer {
     padding-left: 50px;
@@ -79,10 +81,11 @@ footer {
 
 .img-1 img {
     display: block;
+    margin-right: 10%;
     float: right;
     padding-right: 100px;
-    height: 400px;
-    width: auto;
+    height: auto;
+    width: 32%;
 }
 
 ol li a img {
